<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >
    <string name="Apptheme">主题</string>
    <string name="Parttern_Lock">图案锁屏</string>
    <string name="pl_cancel">取消</string>
    <string name="pl_confirm">确认</string>
    <string name="pl_confirm_pattern">再次绘制图案以确认</string>
    <string name="pl_continue">继续</string>
    <string name="pl_draw_pattern">绘制解锁图案</string>
    <string name="pl_draw_pattern_to_unlock">绘制图案以解锁</string>
    <string name="pl_forgot_pattern">忘记图案</string>
    <string name="pl_pattern_confirmed">您的新解锁图案</string>
    <string name="pl_pattern_recorded">已记录图案</string>
    <string name="pl_pattern_too_short">至少连接 %d 个点，请重画</string>
    <string name="pl_recording_pattern">完成后松开手指</string>
    <string name="pl_redraw">重画</string>
    <string name="pl_wrong_pattern">图案错误，请重试</string>
    <string name="pl_access_pattern_start">"开始绘制图案"</string>
    <string name="pl_access_pattern_cleared">"图案已清除"</string>
    <string name="pl_access_pattern_cell_added">"已添加单元格"</string>
    <string name="pl_access_pattern_cell_added_verbose">"已添加圆点 <xliff:g id="CELL_INDEX">%1$d</xliff:g>"</string>
    <string name="pl_access_pattern_detected">"图案绘制完成"</string>
    <string name="pl_access_pattern_area">"图案区域。"</string>
    <string name="main_title">@string/app_name</string>
    <string name="pref_title_pattern_lock">图案解锁</string>
    <string name="pref_title_theme">主题</string>
    <string name="pref_summary_theme">[ %1$s ]</string>
    <string name="pref_dialog_title_theme">选择主题</string>
    <string-array name="pref_entries_theme">
        <item>浅色主题</item>
        <item>深色主题</item>
    </string-array>
    <string name="pref_title_about">关于</string>
    <string name="pattern_lock_title">图案解锁</string>
    <string name="pref_title_set_pattern">设置解锁图案</string>
    <string name="pref_summary_set_pattern_none">[ 未设置图案 ]</string>
    <string name="pref_summary_set_pattern_has">[ 已设置图案 ]</string>
    <string name="pref_title_pattern_visible">使图案可见</string>
    <string name="pref_summary_pattern_visible_off">将在绘制时隐藏图案</string>
    <string name="pref_summary_pattern_visible_on">将在绘制时显示图案</string>
    <string name="pref_title_clear_pattern">清除解锁图案</string>
    <string name="pref_dialog_message_clear_pattern">要清除解锁图案吗？</string>
    <string name="pattern_cleared">已清除解锁图案</string>
    <string name="set_pattern_title">设置解锁图案</string>
    <string name="confirm_pattern_title">确认解锁图案</string>
    <string name="reset_pattern_title">确认密码以重置图案</string>
    <string name="reset_pattern_message">点击“确定”以重置解锁图案。</string>
    <string name="pattern_reset">忘记密码，请保存数据，重置应用！</string>
    <string name="about_title">关于</string>
    <string name="about_name">PatternLock</string>
    <string name="about_version">版本 %1$s</string>
    <string name="about_credit">关于</string>
    <string name="about_baidu"><a href="https://baidu.com/">百度一下</a></string>
    <string name="action_share">分享</string>
    <string name="app_name">密空间</string>
    <string name="action_settings">设置</string>
    <string name="default_settings">重置设置</string>
    <string name="lock">锁</string>
    <string name="lockm">锁</string>
    <string name="unlock">解锁</string>
    <string name="unlockm">解锁</string>
    <string name="empty_password">密码为空</string>
    <string name="re_password">再次输入密码</string>
    <string name="nomatch_password">密码不匹配.</string>
    <string name="working">运行中</string>
    <string name="error">出错</string>
    <string name="open">打开</string>
    <string name="openm">打开</string>
    <string name="extract">提取</string>
    <string name="extractm">提取</string>
    <string name="password">密码</string>
    <string name="repassword">再次输入密码</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="files">%1$s Files</string>
    <string name="file">1 File</string>
    <string name="send_to">发送给</string>
    <string name="r0">&#160;&#160;密空间能够加密你的敏感信息，使用有什么问题，请联系我新浪微博 &lt;a href=http://weibo.com/u/1835567007>Sina&lt;/a></string>
    <string name="r00">&#160;&#160;密空间能够加密你的敏感信息，使用有什么问题，请联系我新浪微博 &lt;a href=http://weibo.com/u/1835567007>Sina&lt;/a>.\n</string>
    <string name="q1">密空间安全吗?</string>
    <string name="r1">&#160;&#160;密空间使用的加密算法AES，使用256位密钥进行加密，不用担心数据被破解。</string>
    <string name="q2">我的信息被保护了吗？</string>
    <string name="r2">&#160;&#160;密空间保证不会把你的数据从您的手机中窃取，不用担心你的信息泄露。</string>
    <string name="q3">我可以共享加密文件吗？</string>
    <string name="r3">&#160;&#160;&#160;&#160;是可以的，共享一个加密的文件，你进入加密库后，找到共享图标按钮，选择进行分享，并将加密密码告知好友即可查看加密数据。上传云端时请选择内存储空间../Lock/Vaults路径下的加密文件进行上传！</string>
    <string name="intro_tittle0">具体看应用说明。</string>
    <string name="intro_desc0">使用密空间你可以轻松加密你的敏感信息，保护你的个人Data。</string>
    <string name="ok1">了解</string>
    <string name="skip">下一步</string>
    <string name="encrypt">加密</string>
    <string name="yourdatasafe">你的数据是安全的</string>
    <string name="workcomplete">操作完成</string>
    <string name="enterhere">[请输入你的信息]</string>
    <string name="action_rate">评价</string>
    <string name="share_subject">查看这个应用!</string>
    <string name="z_loading_tasks_error">错误加载库</string>
    <string name="z_edit">编辑</string>
    <string name="z_edit_task">编辑</string>
    <string name="name_vault">名字</string>
    <string name="empty_name">名字不能为空!</string>
    <string name="exists_vault_whith_name">名字已经存在，请重新输入！</string>
    <string name="migrarTitleActivity">升级</string>
    <string name="error_open_file">打开文件错误</string>
    <string name="migrando_vault">升级应用中...</string>
    <string name="vault_1">密空间:  %1$s</string>
    <string name="loading">加载中 ...</string>
    <string name="error_open_vault">密码错误！</string>
    <string name="menu_lista">列表</string>
    <string name="delete">删除</string>
    <string name="action_undo">撤销</string>
    <string name="notice_removed">项目已移动</string>
    <string name="choose_file">选择一个文件</string>
    <string name="aniadiendo_archivos">添加文件</string>
    <string name="desbloqueando_archivo">解密文件</string>
    <string name="selecione_la_bobeda_a_aniadir">选择这个加密库</string>
    <string name="menu_grid">网格</string>
    <string name="contacto">密助手</string>
    <string name="preguntasFrecuentes">关于</string>
    <string name="share">分享</string>
    <string name="cloud">云空间</string>
    <string name="Share">评价</string>
    <string name="contenido_bobeda_vacio_titulo">添加你的第一个文件</string>
    <string name="lista_bobeda_vacio_titulo">新建一个加密库</string>
    <string name="archivo_no_encontrado">文件没有发现: </string>
    <string name="string_intro">使用密空间，你可以轻松和安全地锁定任何文件。多个加密文件保存在一个名为“Lock”的文件夹中，该文件夹位于设备的主目录中。</string>
    <string name="z_add_task">新建加密库</string>
    <string name="empty_vault_message">加密库不为空</string>
    <string name="extrayendo_archivo">解密文件中 ...</string>
    <string name="archivo_extraido_correcto">文件已解密完成</string>
    <string name="archivo_desbloqueado_correcto">文件已解密完成</string>
    <string name="contenido_bobeda_vacio_descripcion">这个加密库是空的，添加你的第一个文件</string>
    <string name="lista_bobeda_vacio_descripcion">点击创建您的第一个加密库，并在里面您可以保存文件安全</string>
    <string name="abrir_boveda">打开加密库</string>
    <string name="actualPassword">实际密码</string>
    <string name="edit">编辑</string>
    <string name="delete_message">你确定要删除吗?</string>
    <string name="error_delete_file">删除文件失败！</string>
    <string name="fingerprint_description">验证指纹密码</string>
    <string name="fingerprint_hint">点击开始按钮输入指纹</string>
    <string name="start_btn">开始</string>
    <string name="cancel_btn">取消</string>
    <string name="fingerprint_success">Fingerprint recognized.</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again.</string>
    <string name="no_sensor_dialog_title">No fingerprint sensor</string>
    <string name="no_sensor_dialog_message">No fingerprint sensor on your device, click cancel to exit.</string>
    <string name="no_fingerprint_enrolled_dialog_title">No fingerprint enrolled</string>
    <string name="no_fingerprint_enrolled_dialog_message">No fingerprint enrolled, enter\n
        <font fgcolor="green">Setting->Security->Nexus Imprint\n</font>
        to enrollor click cancel to exit.</string>
    <string name="ok_btn_dialog">OK</string>
    <string name="cancel_btn_dialog">Cancel</string>
    <string name="AcquiredGood_warning">The image acquired was good.</string>
    <string name="AcquiredImageDirty_warning">The fingerprint image was too noisy due to suspected or detected dirt on the sensor.
        For example, it\'s reasonable to return this after multiple AcquiredInsufficient or
        actual detection of dirt on the sensor (stuck pixels, swaths, etc.).
        The user is expected to take action to clean the sensor when this is returned.</string>
    <string name="AcquiredInsufficient_warning">The fingerprint image was too noisy to process due to
        a detected condition (i.e. dry skin) or a possibly dirty sensor.</string>
    <string name="AcquiredPartial_warning">Only a partial fingerprint image was detected.
        During enrollment, the user should be informed on what needs to happen to resolve this problem, e.g., "press firmly on sensor."</string>
    <string name="AcquiredTooFast_warning">The fingerprint image was incomplete due to quick motion.
        While mostly appropriate for linear array sensors, this could also happen if the finger was moved during acquisition.
        The user should be asked to move the finger slower (linear) or leave the finger on the sensor longer.</string>
    <string name="AcquiredToSlow_warning">The fingerprint image was unreadable due to lack of motion.
        This is most appropriate for linear array sensors that require a swipe motion.</string>
    <string name="ErrorCanceled_warning">The operation was canceled because the fingerprint sensor is unavailable.
        For example, this may happen when the user is switched,
        the device is locked, or another pending operation prevents or disables it.</string>
    <string name="ErrorHwUnavailable_warning">The hardware is unavailable. Try again later.</string>
    <string name="ErrorLockout_warning">The operation was canceled because the API is locked out due to too many attempts.</string>
    <string name="ErrorNoSpace_warning">Error state returned for operations like enrollment;
        the operation cannot be completed because there\'s not enough storage remaining to complete the operation.</string>
    <string name="ErrorTimeout_warning">Error state returned when the current request has been running too long.
        This is intended to prevent programs from waiting for the fingerprint sensor indefinitely.
        The timeout is platform and sensor-specific, but is generally about 30 seconds.</string>
    <string name="ErrorUnableToProcess_warning">Error state returned when the sensor was unable to process the current image.</string>
</resources>