<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/compartir"
        android:icon="@drawable/z_ic_share_black"
        android:title="@string/share" />
    <item
        android:id="@+id/rate"
        android:icon="@drawable/z_ic_star_black_24dp"
        android:title="@string/action_rate" />
    <item
        android:id="@+id/cloud"
        android:icon="@drawable/ic_cloud_black_24dp"
        android:title="@string/cloud" />
    <item
        android:id="@+id/contacto"
        android:icon="@drawable/ic_bubble_robot_black_24dp"
        android:title="@string/contacto" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="设置" />
    <item
        android:id="@+id/preguntasFrecuentes"
        android:icon="@drawable/z_ic_help_black_24px"
        android:title="@string/preguntasFrecuentes" />
    <!--<item-->
        <!--android:id="@+id/tutorial"-->
        <!--android:icon="@drawable/ic_statistics"-->
        <!--android:title="@string/tutorial" />-->
</menu>