<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".security.finger.FingerPrintActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fingerprint_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="8dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/fingerprint_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/fingerprint_description"
            android:textAppearance="@android:style/TextAppearance"
            android:textColor="?android:attr/textColorSecondary"/>


        <ImageView
            android:id="@+id/fingerprint_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/fingerprint_description"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_fp_40px" />

        <TextView
            android:id="@+id/fingerprint_status"
            style="@android:style/TextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignTop="@+id/fingerprint_icon"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/fingerprint_icon"
            android:gravity="center_vertical"
            android:text="@string/fingerprint_hint"
            android:textColor="@color/ampm_text_color" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/cancel_button"
            android:text="@string/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/start_button"
            android:text="@string/start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>
